--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+<header class="header">
+  <div class="logo">
+    logotype
+    <img src="img/logo.png" width="116" height="22" alt="logotype">
+    <img src="img/phone.svg" width="50" height="50" alt="logotype">
+  </div>
+</header>
 </body>
 </html>
